--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,40 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Entrega S.O.S.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="assets/templates/adminlte/plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Tempusdominus Bbootstrap 4 -->
-    <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"> -->
-    <!-- iCheck -->
-    <link rel="stylesheet" href="assets/templates/adminlte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="assets/templates/adminlte/css/adminlte.css">
-    <!-- overlayScrollbars -->
-    <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"> -->
-    <!-- Daterange picker -->
-    <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/daterangepicker/daterangepicker.css"> -->
-    <!-- summernote -->
-    <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/summernote/summernote-bs4.css"> -->
-    <!-- Google Font: Source Sans Pro -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="assets/icons/site.webmanifest">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="assets/templates/adminlte/plugins/fontawesome-free/css/all.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- Tempusdominus Bbootstrap 4 -->
+  <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"> -->
+  <!-- iCheck -->
+  <link rel="stylesheet" href="assets/templates/adminlte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="assets/templates/adminlte/css/adminlte.css">
+  <!-- overlayScrollbars -->
+  <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"> -->
+  <!-- Daterange picker -->
+  <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/daterangepicker/daterangepicker.css"> -->
+  <!-- summernote -->
+  <!-- <link rel="stylesheet" href="assets/templates/adminlte/plugins/summernote/summernote-bs4.css"> -->
+  <!-- Google Font: Source Sans Pro -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
+
 <body class="hold-transition sidebar-mini">
 
   <app-root></app-root>
@@ -40,6 +46,7 @@
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
     $.widget.bridge('uibutton', $.ui.button)
+
   </script>
   <!-- Bootstrap 4 -->
   <script src="assets/templates/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -66,4 +73,5 @@
   <script src="assets/templates/adminlte/js/adminlte.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
